# spritegrid

./: .gitignore  README.md  VIBELOG.md  cli.py  detection.py  main.py  pyproject.toml  segmentation.ipynb
.github/workflows/: publish-pypi.yml  test.yml
assets/workflows/: nano_banana_spritegrid.json  qwen_image_spritegrid.json
src/: detection.py  main.py  segmentation.py
src/spritegrid/: __init__.py  __main__.py  animation.py  cli.py  crop_and_scale.py  detection.py  main.py  segmentation.py  utils.py
src/spritegrid/comfyui/: __init__.py  nodes.py
src/spritegrid/comfyui/js/: pixelated-preview.js
tests/: test_animation_detection.py  test_animation_io.py  test_animation_process.py  test_background_removal.py  test_cli_animate.py  test_cli_crop_scale.py  test_cli_parse_size.py  test_comfyui_animation.py  test_comfyui_nodes.py  test_compare.py  test_crop_and_scale.py  test_detection.py  test_detection_extra.py  test_detection_refactor.py  test_end_to_end.py  test_grid_detection.py  test_grid_overlay.py  test_grid_translation.py  test_main_utils.py  test_resolution.py  test_segmentation.py  test_symmetry.py  test_utils.py
